<resources>
    <string name="app_name">Twilog</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>

    <string name="icon">icon</string>

    <string name="recent_tweets">Recent tweets</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_history">History</string>

    <string name="move">move</string>

    <string name="find_user">Find User</string>
    <string name="no_items">no items</string>

    <string name="date_format_with_day">E, MMMM dd yyyy</string>

    <string name="font_federation" translatable="false">fonts/federation.ttf</string>
    <string name="font_fontawesome" translatable="false">fonts/fontawesome.ttf</string>
    <string name="select_date">Open by date</string>
    <string name="search_with_text">Search with text</string>
    <string name="change_tweet_order">change tweet order</string>

    <string name="format_username" translatable="false">\@%1$s</string>
    <string name="refusal">Refusal</string>
    <string name="format_date" translatable="false">yyyy/MM/dd HH:mm:ss</string>

    <string name="retweeted_by">Retweeted by \@%1$s</string>


    <string name="order">order</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>

    <string name="title_search">Search</string>
    <string name="keyword">Keyword</string>

    <string name="button_search">Search</string>
    <string name="cancel">Cancel</string>

    <string name="and" translatable="false">AND</string>
    <string name="or" translatable="false">OR</string>

    <string name="query_representation_format">%1$s, %2$s</string>
</resources>
